kubernetes/apps/platform/mail/base/resources/http-route-admin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stalwart-admin-interface
  namespace: stalwart
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "mailadmin.peekoff.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stalwart
          port: 8080
